--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
     "w3c-html-validator": "1.7.0"
   },
   "dependencies": {
+    "focus-visible": "^5.2.1",
     "swiper": "11.0.7"
   },
   "engines": {
