--- a/package.json
+++ b/package.json
@@ -51,7 +51,7 @@
   },
   "dependencies": {
     "focus-visible": "^5.2.1",
-    "swiper": "11.0.7"
+    "swiper": "^11.0.7"
   },
   "engines": {
     "node": "^18.18 || ^20.9"
